--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Hello World</title></head>
     <body>
-        <h1>Hello By Baqir</h1>
+        <center><h1>Hello By Baqir</h1></center>
     </body>
 </html>
