--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Hello World</title></head>
     <body>
-         <center><h1>Hello By Baqir</h1></center>
+        <h1 style="text-align:center;">Hello By Baqir</h1>
     </body>
 </html>
