--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Hello World</title></head>
     <body>
-        <h1 style="text-align:center;">Hello By Baqir</h1>
+        <h1 style="text-align:center;">Hello By All</h1>
     </body>
 </html>
